<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_agregar"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.saladillo.alejandro.examen1_alejandrosanchezgalvin.AgregarActivity">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/imagen_default"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/txtNombrePersonaje"
        android:hint="@string/personaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:drawableLeft="@mipmap/persona"
        app:layout_constraintTop_toBottomOf="@+id/imagen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/txtNombreActor"
        android:hint="@string/interpretado_por"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:drawableLeft="@mipmap/camara"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/txtNombrePersonaje"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/txtUrlPoster"
        android:hint="@string/url_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:drawableLeft="@mipmap/mundo"
        app:layout_constraintTop_toBottomOf="@id/txtNombreActor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textUri" />

    <CheckBox
        android:id="@+id/chkPrincipal"
        android:text="@string/principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUrlPoster" />

    <Spinner
        android:id="@+id/spnTemporada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/temporadas"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chkPrincipal" />

    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        app:layout_constraintBottom_toTopOf="@+id/txtDescripcion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkPrincipal" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@+id/lblDescripcion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textMultiLine" />

</android.support.constraint.ConstraintLayout>
